# SymPP

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  conanfile.py  justfile  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench.cpp
cmake/: FindGMP.cmake  FindMPFR.cmake  SymPPConfig.cmake.in
docs/: 01-vision-and-scope.md  02-architecture.md  03-feature-mapping.md  04-roadmap.md  05-validation-strategy.md  06-build-and-tooling.md  07-coding-standards.md  08-tutorial.md  09-known-issues.md  10-parity-roadmap.md  README.md
examples/: 01_calculus.cpp  02_polynomials.cpp  03_linear_algebra.cpp  04_solving.cpp  05_codegen.cpp  06_ode.cpp  07_pde.cpp  CMakeLists.txt  README.md
examples/algebra/: 01_polynomials.cpp  02_equations_systems.cpp  03_simplification_trig.cpp  04_complex_numbers.cpp  CMakeLists.txt
examples/calculus/: 01_limits_continuity.cpp  02_differentiation.cpp  03_integration.cpp  04_series_taylor.cpp  05_vector_calculus.cpp  06_engineering_odes.cpp  CMakeLists.txt
examples/linear_algebra/: 01_matrix_operations.cpp  02_linear_systems.cpp  03_eigen_vibration.cpp  04_decompositions.cpp  CMakeLists.txt
include/sympp/: fwd.hpp  sympp.hpp  version.hpp.in
include/sympp/calculus/: asymptotes.hpp  diff.hpp  euler_lagrange.hpp  extrema.hpp  limit.hpp  order.hpp  pade.hpp  product.hpp  series.hpp  summation.hpp
include/sympp/codegen/: autowrap.hpp  codegen.hpp
include/sympp/combinatorics/: combinatorics.hpp
include/sympp/core/: add.hpp  api.hpp  assumption_context.hpp  assumption_key.hpp  assumption_mask.hpp  basic.hpp  boolean.hpp  derivative.hpp  expand.hpp  expr_cache.hpp  expr_collections.hpp  float.hpp  function.hpp  function_id.hpp  imaginary_unit.hpp  infinity.hpp  integer.hpp  lambdify.hpp  lambdify_llvm.hpp  mul.hpp  number.hpp  number_arith.hpp  number_symbol.hpp  operators.hpp  piecewise.hpp  pow.hpp  queries.hpp  rational.hpp  refine.hpp  rewrite.hpp  satask.hpp  singletons.hpp  symbol.hpp  traversal.hpp  type_id.hpp  undefined_function.hpp
include/sympp/crypto/: crypto.hpp
include/sympp/discrete/: discrete.hpp
include/sympp/functions/: bessel.hpp  combinatorial.hpp  exponential.hpp  (+8 more)
oracle/: oracle.py  test_oracle.py
parity-workspace/: PLAN.md  acceptance_probe.cpp
src/: CMakeLists.txt
src/calculus/: asymptotes.cpp  diff.cpp  euler_lagrange.cpp  extrema.cpp  gosper.cpp  gosper.hpp  limit.cpp  order.cpp  pade.cpp  product.cpp  series.cpp  summation.cpp  zeilberger.cpp  zeilberger.hpp
src/codegen/: autowrap.cpp  codegen.cpp
src/combinatorics/: combinatorics.cpp
src/core/: add.cpp  assumption_context.cpp  assumption_helpers.hpp  assumption_mask.cpp  basic.cpp  boolean.cpp  canonical_order.hpp  derivative.cpp  expand.cpp  expr_cache.cpp  expr_map.hpp  float.cpp  function.cpp  imaginary_unit.cpp  infinity.cpp  integer.cpp  lambdify.cpp  lambdify_llvm.cpp  mul.cpp  number_arith.cpp  number_symbol.cpp  piecewise.cpp  pow.cpp  queries.cpp  rational.cpp  refine.cpp  rewrite.cpp  satask.cpp  singletons.cpp  string_hash.hpp  symbol.cpp  traversal.cpp  undefined_function.cpp
src/crypto/: crypto.cpp
src/discrete/: discrete.cpp
src/functions/: bessel.cpp  combinatorial.cpp  exponential.cpp  hyperbolic.cpp  hypergeometric.cpp  integers.cpp  miscellaneous.cpp  ntheory.cpp  orthopolys.cpp  special.cpp  trigonometric.cpp
src/geometry/: geometry.cpp
src/integrals/: integrate.cpp  meijerint.cpp  quadrature.cpp  transforms.cpp
src/logic/: logic.cpp
src/matrices/: matrix.cpp  matrix_symbol.cpp
src/ode/: dsolve.cpp
src/parsing/: latex_parser.cpp  parser.cpp
src/physics/: physics.cpp  units.cpp
src/polys/: domain_matrix.cpp  poly.cpp  rootof.cpp  zassenhaus.cpp
src/printing/: printing.cpp
src/sets/: sets.cpp
src/simplify/: hyperexpand.cpp  simplify.cpp
src/solvers/: solve.cpp
src/stats/: stats.cpp
src/tensor/: tensor.cpp
src/vector/: vector_calculus.cpp
tests/: CMakeLists.txt
tests/calculus/: diff_test.cpp  product_test.cpp  series_limit_test.cpp
tests/codegen/: autowrap_test.cpp  codegen_test.cpp
tests/combinatorics/: combinatorics_test.cpp
tests/core/: arithmetic_test.cpp  assumptions_test.cpp  collection_test.cpp  expand_test.cpp  expr_cache_test.cpp  float_test.cpp  imaginary_unit_test.cpp  infinity_test.cpp  integer_test.cpp  lambdify_jit_test.cpp  lambdify_test.cpp  parity_probe.cpp  piecewise_test.cpp  rational_test.cpp  rewrite_test.cpp  satask_test.cpp  singletons_test.cpp  symbol_test.cpp  traversal_test.cpp  undefined_function_test.cpp
tests/crypto/: crypto_test.cpp
tests/discrete/: discrete_test.cpp
tests/functions/: bessel_test.cpp  combinatorial_test.cpp  exponential_test.cpp  hyperbolic_test.cpp  hypergeometric_test.cpp  integers_test.cpp  inverse_trig_test.cpp  miscellaneous_test.cpp  ntheory_test.cpp  orthopolys_test.cpp  special_integrals_test.cpp  special_test.cpp  trigonometric_test.cpp
tests/geometry/: geometry_test.cpp
tests/integrals/: hankel_test.cpp  integrate_test.cpp  meijerint_test.cpp  transforms_test.cpp
tests/logic/: logic_test.cpp
tests/matlab/: matlab_assumptions_test.cpp  matlab_ode_test.cpp  matlab_parsing_test.cpp  matlab_pde_test.cpp  matlab_solvers_test.cpp  matlab_test.cpp
tests/matrices/: jordan_general_test.cpp  matrix_test.cpp  svd_test.cpp
tests/ode/: dsolve_test.cpp
tests/oracle/: oracle.cpp  oracle.hpp  oracle_crosscheck_test.cpp  oracle_smoke_test.cpp
tests/parsing/: latex_parser_test.cpp  parser_test.cpp
tests/physics/: physics_fermion_test.cpp  physics_fock_test.cpp  physics_multimode_fock_test.cpp  physics_normal_order_test.cpp  physics_quantum_test.cpp  physics_test.cpp  units_test.cpp
tests/polys/: domain_matrix_test.cpp  poly_test.cpp  zassenhaus_test.cpp
tests/printing/: pretty_test.cpp  printing_test.cpp
tests/sets/: sets_test.cpp
tests/simplify/: simplify_test.cpp
tests/solvers/: solve_test.cpp
tests/stats/: stats_test.cpp
tests/tensor/: tensor_test.cpp
tests/vector/: vector_calculus_test.cpp
tools/: parity_expected.tsv  parity_sympy.py
(+65 files in other folders)
